templates/kiss/daemonset-optimizer.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-optimizer
  namespace: kiss
spec:
  selector:
    matchLabels:
      name: node-optimizer
  template:
    metadata:
      labels:
        name: node-optimizer
    spec:
      containers:
        - name: disable-thp
          image: docker.io/library/busybox:latest
          command:
            - sh
            - -c
          args:
            - >
              echo madvise >/host/sys/kernel/mm/transparent_hugepage/enabled
              && echo 2099999999 > /host/proc/sys/fs/inotify/max_queued_events
              && echo 2099999999 > /host/proc/sys/fs/inotify/max_user_instances
              && echo 2099999999 > /host/proc/sys/fs/inotify/max_user_watches
              && echo 0 > /host/proc/sys/vm/nr_hugepages
              && exec sleep infinity
          volumeMounts:
            - name: host-proc
              mountPath: /host/proc
            - name: host-sys
              mountPath: /host/sys
        - name: wifi
          image: quay.io/ulagbulag/openark-kiss-optimizer-wifi:latest
          command:
            - /usr/bin/env
            - /usr/bin/bash
            - -c
          args:
            - >
              /opt/scripts/optimize-wifi.py
              && exec sleep infinity
          securityContext:
            privileged: true
            runAsUser: 0
          volumeMounts:
            - name: host-run
              mountPath: /run
            - name: host-sys-fs-cgroup
              mountPath: /sys/fs/cgroup
              readOnly: true
            - name: host-var-run-dbus
              mountPath: /var/run/dbus
            - name: scripts
              mountPath: /opt/scripts
      hostIPC: true
      hostNetwork: true
      volumes:
        - name: host-proc
          hostPath:
            path: /proc
        - name: host-run
          hostPath:
            path: /run
            type: Directory
        - name: host-sys
          hostPath:
            path: /sys
        - name: host-sys-fs-cgroup
          hostPath:
            path: /sys/fs/cgroup
            type: Directory
        - name: host-var-run-dbus
          hostPath:
            path: /var/run/dbus
            type: Directory
        - name: scripts
          configMap:
            defaultMode: 365
            name: ansible-task-optimize
