templates/kiss/dnsmasq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnsmasq
  namespace: kiss
  labels:
    name: dnsmasq
    kissService: "false"
    serviceType: internal
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: dnsmasq
  template:
    metadata:
      labels:
        name: dnsmasq
        kissService: "false"
        serviceType: internal
    spec:
      hostNetwork: true
      nodeSelector:
        # control plane nodes should get ready for DHCP
        node-role.kubernetes.io/control-plane: ""
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dnsmasq
          image: quay.io/poseidon/dnsmasq:latest
          args:
            - -d
            - --enable-tftp
            - --tftp-root=/var/lib/tftpboot
            ## iPXE START
            ### ARCH [0x00] - BIOS
            - --dhcp-match=set:bios,option:client-arch,0
            - --dhcp-boot=tag:bios,undionly.kpxe
            ### ARCH [0x07] - EFI - BC
            - --dhcp-match=set:efi-bc,option:client-arch,7
            - --dhcp-boot=tag:efi-bc,ipxe-x86_64.efi
            ### ARCH [0x09] - EFI - x86_64
            - --dhcp-match=set:efi-x86_64,option:client-arch,9
            - --dhcp-boot=tag:efi-x86_64,ipxe-x86_64.efi
            ### ARCH [0x0B] - EFI - arm64
            - --dhcp-match=set:efi-arm64,option:client-arch,11
            - --dhcp-boot=tag:efi-arm64,ipxe-arm64.efi
            ## iPXE END
            - --dhcp-userclass=set:ipxe,iPXE
            - --dhcp-boot=tag:ipxe,http://matchbox.kiss.svc.ops.netai-cloud/boot.ipxe
            - --dhcp-option=3,$(DHCP_RANGE_IPV4_GATEWAY)
            - --dhcp-option=6,$(DHCP_RANGE_IPV4_NAMESERVER_1)
            - --dhcp-option=26,$(NETWORK_INTERFACE_MTU_SIZE)
            - --dhcp-option=27,1
            - --dhcp-range=$(DHCP_RANGE_IPV4_BEGIN),$(DHCP_RANGE_IPV4_END),$(DHCP_RANGE_IPV4_DURATION)
            - --port=0
            - --bind-dynamic
            - --log-queries
            - --log-dhcp
          ports:
            - name: dhcp
              protocol: UDP
              containerPort: 67
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: misc
              mountPath: /var/lib/misc
            - name: tftpboot
              mountPath: /var/lib/tftpboot
      volumes:
        - name: misc
          hostPath:
            path: /var/lib/dnsmasq
            type: DirectoryOrCreate
        - name: tftpboot
          emptyDir: {}
