templates/kiss/kiss-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  namespace: kiss
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: controller
  template:
    metadata:
      labels:
        name: controller
        serviceType: internal
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: kiss-controller
      containers:
        - name: controller
          image: ghcr.io/ulagbulag-village/netai-cloud:master
          imagePullPolicy: Always
          command:
            - kiss-controller
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 100Mi
