templates/kiss/kiss-manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  namespace: kiss
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: manager
  template:
    metadata:
      labels:
        name: manager
        kissService: "true"
        serviceType: proxy
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: kiss-system
      containers:
        - name: manager
          image: quay.io/ulagbulag-village/netai-cloud:latest
          imagePullPolicy: Always
          command:
            - kiss-manager
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 200Mi
