templates/kiss/kiss-monitor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  namespace: kiss
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: monitor
  template:
    metadata:
      labels:
        name: monitor
        serviceType: internal
    spec:
      imagePullPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: monitor
          image: ghcr.io/ulagbulag-village/netai-cloud:master
          command:
            - kiss-monitor
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 100Mi
