templates/kiss/coredns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coredns
  namespace: kiss
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: coredns
  template:
    metadata:
      labels:
        name: coredns
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: coredns
          image: docker.io/coredns/coredns
          args:
            - -conf
            - /etc/coredns/Corefile
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - name: dns
              protocol: UDP
              containerPort: 53
            - name: dns-tcp
              protocol: TCP
              containerPort: 53
          volumeMounts:
            - name: config
              mountPath: /etc/coredns
      volumes:
        - name: config
          configMap:
            name: coredns
            defaultMode: 0420
---
apiVersion: v1
kind: Service
metadata:
  name: coredns
  namespace: kiss
  annotations:
    metallb.universe.tf/address-pool: kiss_dns
spec:
  type: LoadBalancer
  selector:
    name: coredns
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
  loadBalancerIP: 10.47.0.1
