templates/kiss/dns_proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-proxy
  namespace: kiss
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: dns-proxy
  template:
    metadata:
      labels:
        name: dns-proxy
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dns-proxy
          image: docker.io/qmcgaw/dns
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - name: dns
              protocol: UDP
              containerPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: dns-proxy
  namespace: kiss
  annotations:
    metallb.universe.tf/address-pool: kiss_dns
spec:
  type: LoadBalancer
  selector:
    name: dns-proxy
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
  loadBalancerIP: 172.20.128.2
