templates/kiss/docker-registry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: kiss
spec:
  type: ExternalName
  externalName: docker-registry.kube-system.svc.ops.noa-cloud
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
