templates/kiss/http-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-proxy
  namespace: kiss
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: http-proxy
  template:
    metadata:
      labels:
        name: http-proxy
        kissService: "false"
        serviceType: proxy
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: http-proxy
          image: docker.io/hinata/nginx-forward-proxy:latest
          # image: docker.io/ubuntu/squid:latest
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          ports:
            - name: proxy
              protocol: TCP
              containerPort: 3128
          volumeMounts:
            # TODO: improve config to dismiss the OOMKilled problem
            # - name: config
            #   mountPath: /etc/squid/squid.conf
            #   subPath: squid.conf
            - name: data
              mountPath: /var/spool/squid
      volumes:
        - name: config
          configMap:
            name: http-proxy-config
            items:
              - key: squid.conf
                path: squid.conf
        - name: data
          hostPath:
            path: /var/lib/proxy_cache
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: http-proxy
  namespace: kiss
spec:
  type: ClusterIP
  selector:
    name: http-proxy
  ports:
    - name: http-proxy
      protocol: TCP
      port: 3128
      targetPort: 3128
