templates/kiss/http_proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-proxy
  namespace: kiss
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: http-proxy
  template:
    metadata:
      labels:
        name: http-proxy
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: http-proxy
          image: docker.io/hinata/nginx-forward-proxy
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - name: proxy
              protocol: TCP
              containerPort: 3128
---
apiVersion: v1
kind: Service
metadata:
  name: http-proxy
  namespace: kiss
  annotations:
    metallb.universe.tf/address-pool: kiss_proxy
    coredns.io/hostname: proxy.kiss.netai-cloud
spec:
  type: LoadBalancer
  selector:
    name: http-proxy
  ports:
    - name: http-proxy
      protocol: TCP
      port: 1080
      targetPort: 3128
  loadBalancerIP: 172.20.128.64
