templates/kiss/kiss-assets.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets
  namespace: kiss
  labels:
    name: assets
    kissService: "true"
    serviceType: proxy
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: assets
  template:
    metadata:
      labels:
        name: assets
        kissService: "true"
        serviceType: proxy
    spec:
      affinity:
        nodeAffinity:
          # KISS normal control plane nodes should be preferred
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/kiss-ephemeral-control-plane
                    operator: DoesNotExist
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - ControlPlane
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 8.8.8.8
      dnsPolicy: None
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: assets
          image: quay.io/ulagbulag/openark:latest
          imagePullPolicy: Always
          command:
            - kiss-assets
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
          volumeMounts:
            - name: config
              mountPath: /etc/openark/kiss/assets
            - name: data
              mountPath: /var/lib/kiss/assets/cache
      volumes:
        - name: config
          configMap:
            name: assets-config
            defaultMode: 256
        - name: data
          hostPath:
            path: /var/lib/proxy_cache
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: assets
  namespace: kiss
spec:
  type: ClusterIP
  selector:
    name: assets
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
