templates/kiss/kiss-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns
  namespace: kiss
  labels:
    name: dns
    kissService: "true"
    serviceType: internal
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: dns
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "true"
      labels:
        name: dns
        kissService: "true"
        serviceType: internal
    spec:
      affinity:
        nodeAffinity:
          # KISS normal control plane nodes should be preferred
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/kiss-ephemeral-control-plane
                    operator: DoesNotExist
            - weight: 2
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - Gateway
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - ControlPlane
                      - Gateway
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: kiss-system
      containers:
        - name: dns
          image: quay.io/ulagbulag/openark:latest
          imagePullPolicy: Always
          command:
            - kiss-dns
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dns
  namespace: kiss
  labels:
    ark.ulagbulag.io/is-external: "true"
spec:
  type: ClusterIP
  selector:
    name: dns
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
