templates/kiss/kiss-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: kiss
  labels:
    name: gateway
    kissService: "true"
    serviceType: internal
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: gateway
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "true"
      labels:
        name: gateway
        kissService: "true"
        serviceType: internal
    spec:
      affinity:
        nodeAffinity:
          # KISS normal control plane nodes should be preferred
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/kiss-ephemeral-control-plane
                    operator: DoesNotExist
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - ControlPlane
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: kiss-system
      containers:
        - name: gateway
          image: quay.io/ulagbulag/openark:latest
          imagePullPolicy: Always
          command:
            - kiss-gateway
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: kiss
  labels:
    ark.ulagbulag.io/is-external: "true"
spec:
  type: ClusterIP
  selector:
    name: gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
