templates/kiss/socks5_proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socks5
  namespace: kiss
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: socks5
  template:
    metadata:
      labels:
        name: socks5
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: socks5
          image: docker.io/serjs/go-socks5-proxy
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - name: socks5
              protocol: TCP
              containerPort: 1080
---
apiVersion: v1
kind: Service
metadata:
  name: socks5
  namespace: kiss
  annotations:
    metallb.universe.tf/address-pool: kiss_proxy
    coredns.io/hostname: socks5.kiss.netai-cloud
spec:
  type: LoadBalancer
  selector:
    name: socks5
  ports:
    - name: socks5
      protocol: TCP
      port: 1080
      targetPort: 1080
  loadBalancerIP: 172.20.128.64
